src/objects/Data_Mover_Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_Mover_Job_Log__c</fullName>
        <label>Data Mover Job Log</label>
        <referenceTo>Data_Mover_Job_Log__c</referenceTo>
        <relationshipLabel>Data Mover Error Logs</relationshipLabel>
        <relationshipName>Data_Mover_Error_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Error_Description__c</fullName>
        <label>Error Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Source_Object__c</fullName>
        <label>Source Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Target_Object__c</fullName>
        <label>Target Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_of_Object_External_Id_Field__c</fullName>
        <label>Value of Object External Id Field</label>
        <type>TextArea</type>
    </fields>
    <label>Data Mover Error Log</label>
    <nameField>
        <displayFormat>ERROR-{00000}</displayFormat>
        <label>Data Mover Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Mover Error Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>